[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Check-FunctionFlow"
version = "1.0.0"
description = "Sanity check of function call orders"
readme = "README.md"
authors = [{ name = "Mahdi Tanbakuchi", email = "mehdi.kuchi@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Function", "Check", "Verify"]
requires-python = ">=3.5"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/FunctionFlow/__init__.py" = ["{version}"]