[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Check-FunctionFlow"
version = "1.0.2"
description = "Sanity check of function call orders"
readme = "README.md"
authors = [{ name = "Mahdi Tanbakuchi", email = "mehdi.kuchi@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Function", "Check", "Verify"]
requires-python = ">=3.5"



[project.urls]
Homepage = "https://github.com/mehdikuchi/FunctionFlow"






[tool.bumpver]
current_version = "1.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/FunctionFlow/__init__.py" = ["{version}"]

"README.md" = [
    "{version}",
    "{pep440_version}",
]

